syntax = "proto3";

package booking;

// vehicle service definition
service VehicleService {
    // send a book confirmation to a vehicle
    rpc BookConfirmation (BookConfirmationRequest) returns (AckResponse) {}
}

// The request message containing the user's id and location (lat/lon)
message BookConfirmationRequest {
    string user_id = 1;
    string vehicle_id = 2;
    Location location = 3;
}

// The response message containing the operation ack
message AckResponse {
  bool success = 1;
  string message = 2;
}

// Message containing location data: latitude and longitude
message Location {
  double latitude = 1;
  double longitude = 2;
}